--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,17 +8,17 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <style>
-      * {
-        padding: 0px;
-        margin: 0px;
-      }
+
+      
     </style>
   </head>
-  <body>
+  <body id="body">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div class="container">
+      <div id="app"></div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
